// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Row Snapshots header mode 1`] = `
.emotion-0 th,
.emotion-0 td {
  background-color: #ffffff;
  padding: 12px 8px;
  font-size: 13px;
  border-right: 1px solid #dfe2e6;
  border-bottom: 1px solid #dfe2e6;
  height: 48px;
  box-sizing: border-box;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.emotion-0 td:last-child {
  border-right: none;
}

.emotion-0 th {
  height: 64px;
}

.emotion-0 th:last-child {
  border-right: none;
}

.emotion-0:last-child th,
.emotion-0:last-child td {
  border-bottom: none;
}

.emotion-0:last-child th,
.emotion-0:last-child td {
  border-bottom: 1px solid transparent;
}

.emotion-0 th,
.emotion-0 td {
  position: relative;
  background-color: #ffffff;
  vertical-align: middle;
}

.emotion-0 th:after,
.emotion-0 td:after {
  position: absolute;
  left: 0;
  bottom: -1px;
  content: "";
  width: calc(100% + 1px);
  height: 1px;
  background-color: #dfe2e6;
}

.emotion-0 th:last-child:after,
.emotion-0 td:last-child:after {
  width: 100%;
}

.emotion-0:hover th,
.emotion-0:hover td {
  background-color: #e8ebed;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:focus th,
.emotion-0:focus td {
  background-color: #d7eafc;
  position: relative;
}

.emotion-0:focus th:before,
.emotion-0:focus td:before,
.emotion-0:focus th:after,
.emotion-0:focus td:after {
  position: absolute;
  left: 0;
  top: -1px;
  content: "";
  width: calc(100% + 1px);
  height: 1px;
  background-color: #005cb9;
}

.emotion-0:focus th:after,
.emotion-0:focus td:after {
  top: auto;
  bottom: -1px;
}

.emotion-0:focus th:first-child,
.emotion-0:focus td:first-child {
  box-shadow: inset 1px 0 0 #005cb9;
}

.emotion-0:focus th:last-child,
.emotion-0:focus td:last-child {
  box-shadow: inset -1px 0 0 #005cb9;
}

.emotion-0:focus th:last-child:before,
.emotion-0:focus td:last-child:before,
.emotion-0:focus th:last-child:after,
.emotion-0:focus td:last-child:after {
  width: 100%;
}

.emotion-0:focus th:after,
.emotion-0:focus td:after {
  z-index: 2;
}

<tr
  className="emotion-0 emotion-1"
>
  <th>
    cell
  </th>
</tr>
`;

exports[`Table Row Snapshots renders as expected 1`] = `
.emotion-0 th,
.emotion-0 td {
  background-color: #ffffff;
  padding: 12px 8px;
  font-size: 13px;
  border-right: 1px solid #dfe2e6;
  border-bottom: 1px solid #dfe2e6;
  height: 48px;
  box-sizing: border-box;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.emotion-0 td:last-child {
  border-right: none;
}

.emotion-0 th {
  height: 64px;
}

.emotion-0 th:last-child {
  border-right: none;
}

.emotion-0:last-child th,
.emotion-0:last-child td {
  border-bottom: none;
}

.emotion-0:hover th,
.emotion-0:hover td {
  background-color: #e8ebed;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:focus th,
.emotion-0:focus td {
  background-color: #d7eafc;
  position: relative;
}

.emotion-0:focus th:before,
.emotion-0:focus td:before,
.emotion-0:focus th:after,
.emotion-0:focus td:after {
  position: absolute;
  left: 0;
  top: -1px;
  content: "";
  width: calc(100% + 1px);
  height: 1px;
  background-color: #005cb9;
}

.emotion-0:focus th:after,
.emotion-0:focus td:after {
  top: auto;
  bottom: -1px;
}

.emotion-0:focus th:first-child,
.emotion-0:focus td:first-child {
  box-shadow: inset 1px 0 0 #005cb9;
}

.emotion-0:focus th:last-child,
.emotion-0:focus td:last-child {
  box-shadow: inset -1px 0 0 #005cb9;
}

.emotion-0:focus th:last-child:before,
.emotion-0:focus td:last-child:before,
.emotion-0:focus th:last-child:after,
.emotion-0:focus td:last-child:after {
  width: 100%;
}

.emotion-0:focus th:after,
.emotion-0:focus td:after {
  z-index: 2;
}

<tr
  className="emotion-0 emotion-1"
>
  <td>
    cell
  </td>
</tr>
`;

exports[`Table Row Snapshots states Alert 1`] = `
.emotion-0 th,
.emotion-0 td {
  background-color: #ffffff;
  padding: 12px 8px;
  font-size: 13px;
  border-right: 1px solid #dfe2e6;
  border-bottom: 1px solid #dfe2e6;
  height: 48px;
  box-sizing: border-box;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.emotion-0 td:last-child {
  border-right: none;
}

.emotion-0 th {
  height: 64px;
}

.emotion-0 th:last-child {
  border-right: none;
}

.emotion-0:last-child th,
.emotion-0:last-child td {
  border-bottom: none;
}

.emotion-0 th,
.emotion-0 td {
  background-color: rgba(255,161,38,0.2);
  position: relative;
  border-left-color: #fcd49f;
  border-right-color: #fcd49f;
}

.emotion-0 th:before,
.emotion-0 td:before,
.emotion-0 th:after,
.emotion-0 td:after {
  position: absolute;
  left: 0;
  top: -1px;
  content: "";
  width: calc(100% + 1px);
  height: 1px;
  background-color: #ffa126;
}

.emotion-0 th:after,
.emotion-0 td:after {
  top: auto;
  bottom: -1px;
}

.emotion-0 th:first-child,
.emotion-0 td:first-child {
  box-shadow: inset 1px 0 0 #ffa126;
}

.emotion-0 th:last-child,
.emotion-0 td:last-child {
  box-shadow: inset -1px 0 0 #ffa126;
}

.emotion-0 th:last-child:before,
.emotion-0 td:last-child:before,
.emotion-0 th:last-child:after,
.emotion-0 td:last-child:after {
  width: 100%;
}

.emotion-0:hover th,
.emotion-0:hover td {
  background-color: rgba(255,161,38,0.2);
}

<tr
  className="emotion-0 emotion-1"
>
  <td>
    cell
  </td>
</tr>
`;

exports[`Table Row Snapshots states Error 1`] = `
.emotion-0 th,
.emotion-0 td {
  background-color: #ffffff;
  padding: 12px 8px;
  font-size: 13px;
  border-right: 1px solid #dfe2e6;
  border-bottom: 1px solid #dfe2e6;
  height: 48px;
  box-sizing: border-box;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.emotion-0 td:last-child {
  border-right: none;
}

.emotion-0 th {
  height: 64px;
}

.emotion-0 th:last-child {
  border-right: none;
}

.emotion-0:last-child th,
.emotion-0:last-child td {
  border-bottom: none;
}

.emotion-0 th,
.emotion-0 td {
  background-color: rgba(255,83,71,0.2);
  position: relative;
  border-left-color: #fcc9c5;
  border-right-color: #fcc9c5;
}

.emotion-0 th:before,
.emotion-0 td:before,
.emotion-0 th:after,
.emotion-0 td:after {
  position: absolute;
  left: 0;
  top: -1px;
  content: "";
  width: calc(100% + 1px);
  height: 1px;
  background-color: #ff5347;
}

.emotion-0 th:after,
.emotion-0 td:after {
  top: auto;
  bottom: -1px;
}

.emotion-0 th:first-child,
.emotion-0 td:first-child {
  box-shadow: inset 1px 0 0 #ff5347;
}

.emotion-0 th:last-child,
.emotion-0 td:last-child {
  box-shadow: inset -1px 0 0 #ff5347;
}

.emotion-0 th:last-child:before,
.emotion-0 td:last-child:before,
.emotion-0 th:last-child:after,
.emotion-0 td:last-child:after {
  width: 100%;
}

.emotion-0:hover th,
.emotion-0:hover td {
  background-color: rgba(255,83,71,0.2);
}

<tr
  className="emotion-0 emotion-1"
>
  <td>
    cell
  </td>
</tr>
`;

exports[`Table Row Snapshots states Hover 1`] = `
.emotion-0 th,
.emotion-0 td {
  background-color: #ffffff;
  padding: 12px 8px;
  font-size: 13px;
  border-right: 1px solid #dfe2e6;
  border-bottom: 1px solid #dfe2e6;
  height: 48px;
  box-sizing: border-box;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.emotion-0 td:last-child {
  border-right: none;
}

.emotion-0 th {
  height: 64px;
}

.emotion-0 th:last-child {
  border-right: none;
}

.emotion-0:last-child th,
.emotion-0:last-child td {
  border-bottom: none;
}

.emotion-0:hover th,
.emotion-0:hover td {
  background-color: #e8ebed;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0:focus th,
.emotion-0:focus td {
  background-color: #d7eafc;
  position: relative;
}

.emotion-0:focus th:before,
.emotion-0:focus td:before,
.emotion-0:focus th:after,
.emotion-0:focus td:after {
  position: absolute;
  left: 0;
  top: -1px;
  content: "";
  width: calc(100% + 1px);
  height: 1px;
  background-color: #005cb9;
}

.emotion-0:focus th:after,
.emotion-0:focus td:after {
  top: auto;
  bottom: -1px;
}

.emotion-0:focus th:first-child,
.emotion-0:focus td:first-child {
  box-shadow: inset 1px 0 0 #005cb9;
}

.emotion-0:focus th:last-child,
.emotion-0:focus td:last-child {
  box-shadow: inset -1px 0 0 #005cb9;
}

.emotion-0:focus th:last-child:before,
.emotion-0:focus td:last-child:before,
.emotion-0:focus th:last-child:after,
.emotion-0:focus td:last-child:after {
  width: 100%;
}

.emotion-0:focus th:after,
.emotion-0:focus td:after {
  z-index: 2;
}

<tr
  className="emotion-0 emotion-1"
>
  <td>
    cell
  </td>
</tr>
`;

exports[`Table Row Snapshots states Input Alert 1`] = `
.emotion-0 th,
.emotion-0 td {
  background-color: #ffffff;
  padding: 12px 8px;
  font-size: 13px;
  border-right: 1px solid #dfe2e6;
  border-bottom: 1px solid #dfe2e6;
  height: 48px;
  box-sizing: border-box;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.emotion-0 td:last-child {
  border-right: none;
}

.emotion-0 th {
  height: 64px;
}

.emotion-0 th:last-child {
  border-right: none;
}

.emotion-0:last-child th,
.emotion-0:last-child td {
  border-bottom: none;
}

.emotion-0 th,
.emotion-0 td {
  background-color: rgba(255,161,38,0.2);
}

<tr
  className="emotion-0 emotion-1"
>
  <td>
    cell
  </td>
</tr>
`;

exports[`Table Row Snapshots states Input Error 1`] = `
.emotion-0 th,
.emotion-0 td {
  background-color: #ffffff;
  padding: 12px 8px;
  font-size: 13px;
  border-right: 1px solid #dfe2e6;
  border-bottom: 1px solid #dfe2e6;
  height: 48px;
  box-sizing: border-box;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.emotion-0 td:last-child {
  border-right: none;
}

.emotion-0 th {
  height: 64px;
}

.emotion-0 th:last-child {
  border-right: none;
}

.emotion-0:last-child th,
.emotion-0:last-child td {
  border-bottom: none;
}

.emotion-0 th,
.emotion-0 td {
  background-color: rgba(255,83,71,0.2);
}

<tr
  className="emotion-0 emotion-1"
>
  <td>
    cell
  </td>
</tr>
`;

exports[`Table Row Snapshots states Selected 1`] = `
.emotion-0 th,
.emotion-0 td {
  background-color: #ffffff;
  padding: 12px 8px;
  font-size: 13px;
  border-right: 1px solid #dfe2e6;
  border-bottom: 1px solid #dfe2e6;
  height: 48px;
  box-sizing: border-box;
  -webkit-transition: background-color 0.2s;
  transition: background-color 0.2s;
}

.emotion-0 td:last-child {
  border-right: none;
}

.emotion-0 th {
  height: 64px;
}

.emotion-0 th:last-child {
  border-right: none;
}

.emotion-0:last-child th,
.emotion-0:last-child td {
  border-bottom: none;
}

.emotion-0 th,
.emotion-0 td {
  background-color: #d7eafc;
  position: relative;
}

.emotion-0 th:before,
.emotion-0 td:before,
.emotion-0 th:after,
.emotion-0 td:after {
  position: absolute;
  left: 0;
  top: -1px;
  content: "";
  width: calc(100% + 1px);
  height: 1px;
  background-color: #005cb9;
}

.emotion-0 th:after,
.emotion-0 td:after {
  top: auto;
  bottom: -1px;
}

.emotion-0 th:first-child,
.emotion-0 td:first-child {
  box-shadow: inset 1px 0 0 #005cb9;
}

.emotion-0 th:last-child,
.emotion-0 td:last-child {
  box-shadow: inset -1px 0 0 #005cb9;
}

.emotion-0 th:last-child:before,
.emotion-0 td:last-child:before,
.emotion-0 th:last-child:after,
.emotion-0 td:last-child:after {
  width: 100%;
}

.emotion-0 th:after,
.emotion-0 td:after {
  z-index: 2;
}

<tr
  className="emotion-0 emotion-1"
>
  <td>
    cell
  </td>
</tr>
`;
